# tak-gaf-viewer

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: build.yml
include/: gaf.h
src/: gaf.c  main.c  pal_lookup.c  palette.c
